<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/touristAttractions"
            android:checked="false"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/touristAttractions" />

        <item
            android:id="@+id/shoppingMalls"
            android:checked="false"
            android:icon="@drawable/ic_local_grocery_store_black_24dp"
            android:title="@string/shoppingMalls" />
        <item
            android:id="@+id/restaurants"
            android:checked="false"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/bars"
            android:checked="false"
            android:icon="@drawable/ic_local_bar_black_24dp"
            android:title="@string/bars" />

        <item
            android:id="@+id/hotels"
            android:checked="false"
            android:icon="@drawable/ic_hotel_black_24dp"
            android:title="@string/hotels" />
    </group>

</menu>
